# policy-tracker

./: .gitignore  AWS_INTEGRATION_GUIDE.md  CNAME  COUNTRY_COMPARISON_IMPROVEMENT.md  ENVIRONMENT_CONFIG.md  LOGIN_ISSUE_FIXED.md  POLICY_RANKING_README.md  README.md  debug_env.py  dev-start.bat  dev-start.sh  package-lock.json  policy_data.csv  render.yaml  start-backend.py  start-dev.ps1  start-dev.sh  terminal  test_aws_service.py  test_comprehensive_popup.py  test_database_direct.py  test_policy_deletion.py
backend/: .env  .env.example  .gitignore  RAG_CHATBOT_SETUP_GUIDE.md  RAG_DEPLOYMENT_GUIDE.md  README.md  README_NEW_STRUCTURE.md  RESTRUCTURING_STATUS_REPORT.md  __init__.py  app_main.py  chatbot.py  check_corruption.py  check_database.py  clean_database.py  config.py  database.py  debug_actual_database.py  debug_ai_comparison.py  debug_chat.py  debug_comparison_flow.py  debug_conversation_context.py  debug_env_loading.py  debug_openai_api.py  debug_policy_areas.py  debug_policy_filtering.py  deployment_fix_summary.md  fix_services.py  main.py  main_new.py  main_old.py  main_simple.py  migrate_data.py  migrate_to_rag.py  models.py  policy_data.csv  policy_data_20250505_131310.csv  policy_data_20250505_131642.csv  policy_data_20250505_204555.csv  policy_data_20250506_173939.csv  policy_data_20250507_125114.csv  (+64 more)
backend/api/: __init__.py
backend/app/: main.py  requirements.txt
backend/chatbot/: chat_utils.py  chatbot.py
backend/config/: constants.py  data_constants.py  database.py  dynamodb.py  env_constants.py  settings.py
backend/controllers/: admin_controller.py  ai_analysis_controller.py  ai_analysis_controller_dynamodb.py  auth_controller.py  chat_controller.py  debug_controller.py  policy_controller.py  policy_controller_dynamodb.py  public_controller.py  public_controller_clean.py  rag_chat_controller.py  system_controller.py  visit_controller.py
backend/core/: __init__.py  config.py  constants.py  database.py  security.py
backend/database/: connection.py  crud.py  helpers.py
backend/middleware/: auth.py  cors.py
backend/models/: __init__.py  admin_dynamodb.py  auth.py  base_models.py  chat.py  chat_dynamodb.py  chat_models.py  file_metadata_dynamodb.py  policy.py  policy_dynamodb.py  policy_models.py  rag_models.py  user.py  user_dynamodb.py
backend/routes/: admin_routes.py  approved_routes.py  chat_routes.py  export_routes.py  file_routes.py  main.py  (+3 more)
(+147 files in other folders)
