[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rakib <bsse1320@iit.du.ac.bd>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
motor = ">=3.7.1,<4.0.0"
pymongo = ">=4.13.0,<5.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
python-multipart = "*"
google-generativeai = "^0.8.5"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
