[tool.poetry]
name = "policy-tracker-backend"
version = "0.1.0"
description = "AI Policy Tracker Backend API"
authors = ["Rakib <bsse1320@iit.du.ac.bd>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
motor = "^3.7.1"
pymongo = "^4.12.0"
python-dotenv = "^1.1.0"
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"