[tool.poetry]
name = "policy-tracker-backend"
version = "1.0.0"
description = "Policy Tracker Backend API"
authors = ["Policy Tracker Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.1.0"
python-multipart = "^0.0.20"
bcrypt = "*"
PyJWT = "*"
email-validator = "^2.1.0"
requests = "^2.32.0"
boto3 = "^1.26.0"
redis = "^4.5.0"
motor = "*"
numpy = "^2.0.0"
pandas = "^2.2.0"
scipy = "^1.14.0"
statsmodels = "^0.14.0"
google-generativeai = "^0.3.0"
PyPDF2 = "^3.0.1"
python-docx = "^1.1.2"
Pillow = "^9.5.0"
dnspython = "^2.7.0"
python-dateutil = "^2.9.0"
pytz = "^2025.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
